--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hacked By katshib</title>
+  <title>Hacked By FKR</title>
   <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/736x/ea/8d/76/ea8d761ecb41f120b5e20d803f30e1b1.jpg" />
-  <meta name="description" content="Hacked by katshib" />
-  <meta name="author" content="Hacked by katshib" />
+  <meta name="description" content="Hacked by FKR" />
+  <meta name="author" content="Hacked by FKR" />
 
-  <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto:wght@400;700&family=Courier+New&family=Shadows+Into+Light&family=Montserrat:wght@700&family=Oswald:wght@700&family=Raleway:wght@700&display=swap" rel="stylesheet" />
+  <!-- خط جديد: Cairo -->
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet" />
 
   <style>
     body {
@@ -20,47 +21,47 @@
       line-height: 1.3;
       margin: 0;
       padding: 0;
+      font-family: 'Cairo', sans-serif;
     }
+
     a {
       text-decoration: none;
       color: white;
     }
+
     a:hover {
       color: maroon;
     }
+
     .main-title {
-      font-family: 'Bungee', cursive;
-      font-size: 23pt;
-      text-transform: uppercase; 
+      font-size: 26pt;
+      text-transform: uppercase;
       letter-spacing: 3px;
       text-shadow: 2px 2px 4px rgba(255, 0, 0, 0.5);
       margin-bottom: 0.5em;
+      font-weight: bold;
     }
-    .main-title .xyz {
-      color: white; 
-      margin-left: 5px; 
-    }
+
     .message {
-      font-family: 'Montserrat', sans-serif;
-      font-size: 14pt;
-      margin: 6px 0; 
-    }
-    .status-line {
-      font-family: 'Oswald', sans-serif;
-      font-size: 14pt;
-      color: white;
+      font-size: 16pt;
       margin: 6px 0;
     }
+
+    .status-line {
+      font-size: 14pt;
+      margin: 6px 0;
+    }
+
     .status-line .red {
       color: red;
     }
+
     .greetz {
-      font-family: 'Raleway', sans-serif;
-      font-size: 12pt;
+      font-size: 13pt;
       margin: 12px 0 0 0;
     }
+
     .team {
-      font-family: 'Raleway', sans-serif;
       font-size: 12pt;
       color: #ccc;
       margin-top: 25px;
@@ -78,8 +79,7 @@
   <p class="main-title">
     <span style="color: white;">Hacked By </span> 
     <span style="color: #ff2c2c;">| FKR |</span>
-    <span class="4505">  </span>
-    <img height="25" width="25" src="https://i.pinimg.com/736x/ea/8d/76/ea8d761ecb41f120b5e20d803f30e1b1.jpg" alt="Animated icon" />
+    <img height="25" width="25" src="https://i.pinimg.com/736x/ea/8d/76/ea8d761ecb41f120b5e20d803f30e1b1.jpg" alt="Icon" />
   </p>
 
   <p class="message">Ops! Admin, Your Site Got Hacked</p>
@@ -88,14 +88,14 @@
 
   <p class="greetz">
     inst:<br />
-     ~ @dnlid ~
+    ~ @dnlid ~
   </p>
 
   <script>
     const video = document.getElementById("myVideo");
     video.muted = true;
 
-    // أول ضغطة من المستخدم = نشغل الصوت
+    // عند أول نقرة على الشاشة، يشتغل الصوت
     document.body.addEventListener("click", () => {
       video.muted = false;
       video.play();
