--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
   <meta name="description" content="Hacked by FKR" />
   <meta name="author" content="Hacked by FKR" />
 
-  <!-- خط جديد: Cairo -->
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet" />
-
   <style>
     body {
       background: black;
@@ -21,7 +18,7 @@
       line-height: 1.3;
       margin: 0;
       padding: 0;
-      font-family: 'Cairo', sans-serif;
+      font-family: sans-serif;
     }
 
     a {
@@ -95,7 +92,7 @@
     const video = document.getElementById("myVideo");
     video.muted = true;
 
-    // عند أول نقرة على الشاشة، يشتغل الصوت
+    // أول ضغطة من المستخدم = الصوت يشتغل
     document.body.addEventListener("click", () => {
       video.muted = false;
       video.play();
